<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArtworkActivity">


    <ImageView
            android:layout_width="0dp"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/artwork_image"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/artwork_image"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintVertical_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"
            android:padding="5dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:max="100"
            android:progress="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/answer_a_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/a_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_button"
            style="@style/Base.Widget.AppCompat.ActionButton.CloseMode" app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center"
            android:background="@drawable/oval_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/narator_text"
            app:layout_constraintVertical_bias="0.257" android:layout_marginBottom="32dp"/>
    <Button
            android:text="@string/answer_b_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/b_button"
            style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
            android:textAlignment="center"
            android:background="@drawable/oval_button"
            app:layout_constraintStart_toEndOf="@+id/a_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/narator_text"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.257"/>
    <Button
            android:text="@string/answer_c_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/c_button"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/d_button" app:layout_constraintHorizontal_bias="0.5"
            android:textAlignment="center" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/a_button" android:background="@drawable/oval_button"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/answer_d_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/d_button"
            style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
            android:textAlignment="center"
            android:background="@drawable/oval_button"
            app:layout_constraintStart_toEndOf="@+id/c_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/b_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.504"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/narrator_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/narator_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="20sp" android:fontFamily="sans-serif-medium" android:textAlignment="center"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/progressBar"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.492" app:layout_constraintVertical_bias="0.016"/>
    <Button
            android:text="@string/tryagain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tryagain_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/narator_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:visibility="gone" android:fontFamily="sans-serif-light"/>
</android.support.constraint.ConstraintLayout>